--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mdx-js/mdx": "^1.4.0",
     "@mdx-js/react": "^1.4.0",
     "gatsby": "^2.13.73",
+    "gatsby-background-image": "^0.8.9",
     "gatsby-plugin-emotion": "^4.1.5",
     "gatsby-plugin-mdx": "^1.0.35",
     "gatsby-plugin-react-helmet": "^3.1.6",
+    "gatsby-plugin-sharp": "^2.2.19",
     "gatsby-source-filesystem": "^2.1.19",
+    "gatsby-transformer-sharp": "^2.2.13",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1"
